ipapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ipapp
    labels:
        app: ipapp
    namespace: ingress-nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ipapp
    template:
        metadata:
            labels:
                app: ipapp
        spec:
            containers:
            - name: ipapp
              image: hadarneu/ipapp
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 80
