nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
    spec:
      # hostNetwork makes it possible to use ipv6 and to preserve the source IP correctly regardless of docker configuration
      # however, it is not a hard dependency of the ingress-nginx-controller itself and it may cause issues if port 10254 already is taken on the host
      # that said, since hostPort is broken on CNI (https://github.com/kubernetes/kubernetes/issues/31307) we have to use hostNetwork where CNI is used
      # like with kubeadm
      # hostNetwork: true
      terminationGracePeriodSeconds: 60
      containers:
      - image: registry.k8s.io/ingress-nginx/controller:v1.0.5
        name: controller
#        readinessProbe:
#          httpGet:
#            path: /healthz
#            port: 10254
#            scheme: HTTP
#        livenessProbe:
#          httpGet:
#            path: /healthz
#            port: 10254
#            scheme: HTTP
#          initialDelaySeconds: 10
#          timeoutSeconds: 1
        ports:
        - containerPort: 80
          hostPort: 80
#        - containerPort: 443
#          hostPort: 443
        args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/ipapp-service
