clusterip-ipapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipapp-service
  namespace: ingress-nginx
spec:
  selector:
    app: ipapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
