lb-ipapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipapp-external
spec:
  selector:
    app: ipapp
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
    nodePort: 30001
