nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
    #annotations:
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ipapp.com
      http:
        paths:
        - path:
          - backend:
            serviceName: ipapp-nodeport
            servicePort: 8080
